# KS_bodyanalysis_and_record

./: .env.example  .gitignore  README.md  config.yaml.example  environment.yml  main.py  pipeline.py  pyproject.toml  requirements.txt
config/: settings.py
db/: init_db.py  repository.py  schema.py
extractor/: decompress.py  metadata.py
ksbody/: __main__.py  config.py  manager.py  recipe_filename.py  timeutils.py
ksbody/db/: init_db.py  schema.py  (+1 more)
legacy/: ks_body_to _recipe.py
parsers/: app_parser.py  csv_parser.py  key_value_parser.py  monitor_parser.py  registry.py  sectioned_parser.py  sqlite_parser.py
samples/: L_WBK_ConnX Elite@PJA3406@ECC17@WAF903898_1  L_WBK_ConnX Elite@PJS6400@ECC17@WAF007957_1
scripts/: build_process_step_lookup.py  deploy.sh  mount-smb.sh  start-web.bat  start-web.sh  start.sh  test_smb_connection.py  verify_mysql.py
tests/: import_single.py  seed_dummy.py  support.py  test_bnd_registry_apply_change.py  test_build_process_step_lookup.py  test_cleanup_scheduler.py  test_cli_bootstrap.py  test_compare_apply_change.py  test_db_init.py  test_file_state_store.py  test_imports_delete.py  test_imports_routes.py  test_param_classifier.py  test_pipeline.py  test_pipeline_apply_change.py  test_recipe_filename.py  test_reparse_execution.py  test_scanner_skipped_events.py  test_verify.py  test_watcher_events.py  test_watcher_file_delete.py  test_watcher_path_validation.py  test_watcher_routes_integration.py
watcher/: handler.py  scanner.py
web/: .env.example  README.md  app.py  deps.py  requirements.txt  settings.py  start.bat  start.sh
(+227 files in other folders)
